src/components/data-list/_data-list.scss
@import "../../settings/all";
@import "../../tools/all";
@import "../../helpers/all";

@include govuk-exports("govuk/component/data-list") {

  .govuk-data-list {
    @include govuk-font($size: 19);
    @include govuk-text-colour;
    display: table;
    width: 100%;
    margin: 0;
    @include govuk-responsive-margin(9, "bottom");
  }

  .govuk-data-list__row {
    display: table-row;
    width: 100%;
    border-bottom: 1px solid $govuk-border-colour;
  }

  .govuk-data-list__item {
    display: block;
    padding: govuk-spacing(3);
    margin: 0;
    padding-left: 0;

    @include govuk-media-query($from: tablet) {
      display: table-cell;
      border-bottom: 1px solid $govuk-border-colour;
    }
  }

  .govuk-data-list__item > p {
    margin-bottom: govuk-spacing(2);
  }

  .govuk-data-list__item > :last-child {
    margin-bottom: 0;
  }

  .govuk-data-list__item--definition {
    @include govuk-typography-weight-bold;
    width: 50%;
    padding-right: govuk-spacing(3);
    padding-bottom: govuk-spacing(1);
    border-bottom: 0;

    @include govuk-media-query($from: tablet) {
      width: 25%;
      padding-bottom: govuk-spacing(2);
      border-bottom: 1px solid $govuk-border-colour;
    }
  }

  .govuk-data-list__item-align-right {

    @include govuk-media-query($from: tablet) {
      text-align: right;
    }
  }

  .govuk-data-list__action {
    display: block;
    margin: 0;
    margin-bottom: govuk-spacing(3);
    padding: govuk-spacing(2) 0;
    border-bottom: 1px solid $govuk-border-colour;

    @include govuk-media-query($from: tablet) {
      display: table-cell;
      width: 25%;
      padding-bottom: govuk-spacing(2);
    }
  }

  .govuk-data-list__action-list {
    width: 100%;
    margin: 0;
    padding: 0;

    @include govuk-media-query($from: tablet) {
      text-align: right;
    }
  }

  .govuk-data-list__action-list-item {
    display: inline;
    padding-right: govuk-spacing(2);
    border-right: 1px solid $govuk-border-colour;
  }

  .govuk-data-list__action-list-item:nth-last-of-type(1) {
    padding-right: 0;
    padding-left: 0;
    border-right: 0;

    @include govuk-media-query($from: tablet) {
      padding-left: govuk-spacing(1);
    }
  }

  // No borders

  .govuk-data-list--no-border .govuk-data-list__item {
    @include govuk-responsive-margin(6, "right");
    border-bottom: 0;

    @include govuk-media-query($until: tablet) {
      display: block;
      margin-bottom: govuk-spacing(3);
      padding: 0;
    }
  }

  .govuk-data-list--no-border .govuk-data-list__item--definition {

    @include govuk-media-query($until: tablet) {
      margin-bottom: govuk-spacing(1);
    }
  }

}

